@@ -161,9 +161,9 @@ public class UserAuthzServiceTest
 		context.setLoginSession(new LoginSession(null, null, 0, 2, null, null, null, null));
 		InvocationContext.setCurrent(context);
 
-		SCIMEndpointDescription configuration = new SCIMEndpointDescription(URI.create("https://localhost:2443/scim"),
-				"/scim", Collections.emptyList(), Collections.emptyList(), Collections.emptyList(),
-				List.of("groupAttr1", "groupAttr2"), Collections.emptyList());
+		SCIMEndpointDescription configuration = SCIMEndpointDescription.builder()
+				.withBaseLocation(URI.create("https://localhost:2443/scim")).withRootGroup("/scim")
+				.withMembershipAttributes(List.of("groupAttr1", "groupAttr2")).build();
 
 		UserAuthzService attributeFilterService = new UserAuthzService(authzMan, configuration);
 		Predicate<AttributeDefinitionWithMapping> filter = attributeFilterService.getFilter();
@@ -187,9 +187,9 @@ public class UserAuthzServiceTest
 		context.setScopes(List.of(SCIMSystemScopeProvider.READ_MEMBERSHIPS_SCOPE));
 		InvocationContext.setCurrent(context);
 
-		SCIMEndpointDescription configuration = new SCIMEndpointDescription(URI.create("https://localhost:2443/scim"),
-				"/scim", Collections.emptyList(), Collections.emptyList(), Collections.emptyList(),
-				List.of("groupAttr1", "groupAttr2"), Collections.emptyList());
+		SCIMEndpointDescription configuration = SCIMEndpointDescription.builder()
+				.withBaseLocation(URI.create("https://localhost:2443/scim")).withRootGroup("/scim")
+				.withMembershipAttributes(List.of("groupAttr1", "groupAttr2")).build();
 
 		UserAuthzService attributeFilterService = new UserAuthzService(authzMan, configuration);
 		Predicate<AttributeDefinitionWithMapping> filter = attributeFilterService.getFilter();
@@ -217,9 +217,9 @@ public class UserAuthzServiceTest
 		context.setScopes(List.of(SCIMSystemScopeProvider.READ_PROFILE_SCOPE));
 		InvocationContext.setCurrent(context);
 
-		SCIMEndpointDescription configuration = new SCIMEndpointDescription(URI.create("https://localhost:2443/scim"),
-				"/scim", Collections.emptyList(), Collections.emptyList(), Collections.emptyList(),
-				List.of("groupAttr1", "groupAttr2"), Collections.emptyList());
+		SCIMEndpointDescription configuration = SCIMEndpointDescription.builder()
+				.withBaseLocation(URI.create("https://localhost:2443/scim")).withRootGroup("/scim")
+				.withMembershipAttributes(List.of("groupAttr1", "groupAttr2")).build();
 
 		UserAuthzService attributeFilterService = new UserAuthzService(authzMan, configuration);
 		Predicate<AttributeDefinitionWithMapping> filter = attributeFilterService.getFilter();
@@ -248,9 +248,9 @@ public class UserAuthzServiceTest
 				List.of(SCIMSystemScopeProvider.READ_PROFILE_SCOPE, SCIMSystemScopeProvider.READ_MEMBERSHIPS_SCOPE));
 		InvocationContext.setCurrent(context);
 
-		SCIMEndpointDescription configuration = new SCIMEndpointDescription(URI.create("https://localhost:2443/scim"),
-				"/scim", Collections.emptyList(), Collections.emptyList(), Collections.emptyList(),
-				List.of("groupAttr1", "groupAttr2"), Collections.emptyList());
+		SCIMEndpointDescription configuration = SCIMEndpointDescription.builder()
+				.withBaseLocation(URI.create("https://localhost:2443/scim")).withRootGroup("/scim")
+				.withMembershipAttributes(List.of("groupAttr1", "groupAttr2")).build();
 
 		UserAuthzService attributeFilterService = new UserAuthzService(authzMan, configuration);
 		Predicate<AttributeDefinitionWithMapping> filter = attributeFilterService.getFilter();
@@ -271,9 +271,11 @@ public class UserAuthzServiceTest
 
 	private UserAuthzService getAuthzService()
 	{
-		SCIMEndpointDescription configuration = new SCIMEndpointDescription(URI.create("https//localhost:2443/scim"),
-				"/scim", List.of("/scim/Members1", "/scim/Members2"), Collections.emptyList(), Collections.emptyList(),
-				Collections.emptyList(), Collections.emptyList());
+		SCIMEndpointDescription configuration = SCIMEndpointDescription.builder()
+				.withBaseLocation(URI.create("https://localhost:2443/scim")).withRootGroup("/scim")
+				.withMembershipGroups(List.of("/scim/Members1", "/scim/Members2"))
+				.withMembershipAttributes(List.of("groupAttr1", "groupAttr2")).build();
+
 		return new UserAuthzService(authzMan, configuration);
 	}
 }
